# robotica

./: LICENSE
pratica_1/: README.md
pratica_1/PARTE_A/install/: local_setup.sh  setup.sh
pratica_1/PARTE_A/log/: latest_build
pratica_1/PARTE_A/src/cpp_pubsub/: CMakeLists.txt
pratica_1/PARTE_B/install/: local_setup.sh  setup.sh
pratica_1/PARTE_B/log/: latest_build
pratica_1/PARTE_B/src/cpp_srvcli/: CMakeLists.txt  package.xml
pratica_1/PARTE_C/install/: local_setup.sh  setup.sh
pratica_1/PARTE_C/log/: latest_build
pratica_1/PARTE_C/src/cpp_parameters/: CMakeLists.txt
pratica_1/PARTE_C/src/more_interfaces/: CMakeLists.txt  package.xml
pratica_1/PARTE_C/src/more_interfaces/src/: publish_address_book.cpp
pratica_1/PARTE_C/src/polygon_base/: CMakeLists.txt  package.xml
pratica_1/PARTE_C/src/polygon_plugins/: CMakeLists.txt  package.xml
pratica_1/PARTE_D/src/action_tutorials_cpp/: CMakeLists.txt  package.xml
pratica_1/PARTE_D/src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
pratica_1/PARTE_E/cpp_launch_example/: CMakeLists.txt  package.xml
pratica_1/PARTE_F/src/launch_tutorial/: package.xml  setup.py
pratica_1/src/cpp_pubsub/: CMakeLists.txt  package.xml
pratica_1/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
pratica_2/: frames_2025-09-20_16.50.16.gv  rodar.sh
pratica_2/src/robotics_class/behavior_trees/: my_nav_to_pose_bt.xml
pratica_2/src/robotics_class/launch/: ekf.launch.py  navigation.launch.py
pratica_2/src/robotics_class/maps/: class_map.pgm  class_map.yaml
(+25 files in other folders)
